--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -1,32 +1,43 @@
 @use "../abstracts" as *;
 
+$bp-landing-largest: 156.25em; // 2500px, 2500/16 = 156.25em
+$bp-landing-small: 56.25em; // 900px, 900/16 = 56.25em
+$bp-landing-navbar: 44.25em; // 708px, 708/16 = 39.375em
+$bp-landing-smallest: 36.875em; // 590px, 590/16 = 36.875em
+
+$bp-smallest: 20em; // 320px, 320/16 = 20em
 /* Basix reset */
 *,
 *::after,
 *::before {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 
-    /* 
+  /* 
     Inherit box-sizing from parent, which will the the value
     defined in the body element
     */
-    box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 html {
-    // This defines what 1 rem is
-    font-size: 62.5%; // 1rem = 10px, 10/16 = 50%
+  // This defines what 1 rem is
+  font-size: 62.5%; // 1rem = 10px, 10/16 = 50%
+
+  @media only screen and (max-width: $bp-landing-small) {
+    // 1rem = 8px
+    font-size: 50%;
+  }
 }
 
 body {
-    box-sizing: border-box;
-    background-color: #e9e9e9;
-    overflow-x: hidden;
+  box-sizing: border-box;
+  background-color: #e9e9e9;
+  overflow-x: hidden;
 }
 
 // Style of selected text, images, etc.
 ::selection {
-    background-color: $color-primary-dark;
-    color: $color-white;
+  background-color: $color-primary-dark;
+  color: $color-white;
 }
